[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "4.3", git = "https://github.com/mihai-craita/oauth2-rs" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-reverse-proxy = "1"
dotenvy = "0.15"

[dependencies.uuid]
version = "1.3.0"
features = [ "v4", "fast-rng" ]
